--- a/package.json
+++ b/package.json
@@ -1,14 +1,34 @@
 {
-  "name": "simple-portfolio",
+  "name": "jasurbek-shomaqsudov",
   "version": "0.1.0",
   "private": true,
+  "keywords": [
+    "jasurbek",
+    "Jasurbek",
+    "shomaqsudov",
+    "Shomaqsudov",
+    "Jasurbek Shomaqsudov",
+    "Shomaqsudov Jasurbek",
+    "Jasurbek Frontend",
+    "Shomaqsudov Frontend",
+    "frontend developer",
+    "jasur",
+    "shomaqsudov jasur"
+  ],
+  "author": {
+    "url": "https://shomaqsudov.vercel.app",
+    "email": "jasurbekshomaqsudov2004@gmail.com",
+    "name": "Jasurbek Shomaqsudov"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
