social media add

--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "shomaqsudov",
     "Shomaqsudov",
     "Jasurbek Shomaqsudov",
+    "Jasurbek Shomaqsudov Frontend",
+    "Shomaqsudov Jasurbek Frontend",
     "Shomaqsudov Jasurbek",
     "Jasurbek Frontend",
+    "jasurbek frontend",
+    "Jasur Frontend",
     "Shomaqsudov Frontend",
     "frontend developer",
     "jasur",
-    "shomaqsudov jasur"
+    "Jasur",
+    "shomaqsudov jasur",
+    "jasur shomaqsudov"
   ],
   "author": {
     "url": "https://shomaqsudov.vercel.app",
