fix: contact send massage

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Jasurbek Shomaqsudov",
-  "name": "Jasurbek Shomaqsudov - Front-end Developere",
+  "short_name": "JS Portfolio",
+  "name": "Jasurbek Shomaqsudov - Frontend Developer",
   "icons": [
     {
       "src": "favicon.ico",
