--- a/public/manifest.json
+++ b/public/manifest.json
@@ -24,7 +24,7 @@
       "sizes": "128x128"
     },
     {
-      "src": "logo2.png",
+      "src": "logo.png",
       "type": "image/png",
       "sizes": "144x144"
     },
